--- a/index.html
+++ b/index.html
@@ -2,11 +2,42 @@
  <html>
   <head>
     <title> </title>
+    <link href="resources/css/reset.css" type="text/css" rel="stylesheet">
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
+    <header>
+      <div class="logo">
+        <img src="resources\images\ic-logo.svg">
+        <h3>COLMAR</h3>
+        <h3>ACADEMY</h3>
+      </div>
+      <div>
+        <ul>
+          <li>On Campus</li>
+          <li>Online</li>
+          <li>For companies</li>
+          <li>Sign in<li>
+        </ul>
+      </div>
+    </header>
+
+   <div class="upset">
+    <div class="banner">
+      <div class="img-cont">
+        <img src="resources/images/banner.jpg">
+      </div>
+      <div class="banner-info">
+        <h1>Learn something new everyday</h1>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+        <p>Start here</p>
+      </div>
+    </div>
+
+
+
+</div>
   </body>
 
   </html>
-
-  
