--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
    <div class="upset">
     <div class="banner">
-      <div class="img-cont">
-        <img src="resources/images/banner.jpg">
-      </div>
+
+        <img src="resources/images/banner.jpg" class="img-cont">
+    
       <div class="banner-info">
         <h1>Learn something new everyday</h1>
         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
