--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="banner">
 
         <img src="resources/images/banner.jpg" class="img-cont">
-    
+
       <div class="banner-info">
         <h1>Learn something new everyday</h1>
         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
@@ -35,6 +35,38 @@
       </div>
     </div>
 
+    <!--Business-->
+
+    <div class="business">
+      <div class="business-banner">
+        <img src="resources/images/information-main.jpg">
+        <h2>It doesn't hurt to keep practicing</h2>
+        <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,nec consequat neque. Sed nom accusan urna. Phasellus sed consequat ex.Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+        <p> Emanuel, Sr Strategist at Hiring.com</p>
+      </div>
+      <div class="business-info">
+        <div class="info">
+          <img src="resources\images\information-orientation.jpg">
+          <div class="bocadillo">
+            <h3>Orientation date</h3>
+            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+            <p><a>Read more</a></p>
+          </div>
+        </div>
+        <div class="info">
+          <img src="resources\images\information-campus.jpg">
+          <h3>Our campus</h3>
+          <p>Find which campus is close by you</p>
+          <p><a>Read more</a></p>
+        </div>
+        <div class="info">
+          <img src="resources\images\information-guest-lecture.jpg">
+          <h3>Our guest lecture</h3>
+          <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+          <p><a>Read More</a></p>
+        </div>
+      </div>
+    </div>
 
 
 </div>
