--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
       </div>
     </header>
 
+<!--Banner-->
+
    <div class="upset">
     <div class="banner">
-
-        <img src="resources/images/banner.jpg" class="img-cont">
-
+      <div class="img-cont">
+        <img src="resources/images/banner.jpg">
+      </div>
       <div class="banner-info">
         <h1>Learn something new everyday</h1>
         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
