ajustando los tama;os de info

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
       </div>
       <div class="business-info">
         <div class="info">
-          <img src="resources\images\information-orientation.jpg">
+          <div class="img-cont"
+            <img src="resources\images\information-orientation.jpg">
+          </div>
           <div class="bocadillo">
             <h3>Orientation date</h3>
             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
@@ -56,16 +58,23 @@
           </div>
         </div>
         <div class="info">
-          <img src="resources\images\information-campus.jpg">
-          <h3>Our campus</h3>
-          <p>Find which campus is close by you</p>
-          <p><a>Read more</a></p>
+          <div class="img-cont">
+            <img src="resources\images\information-campus.jpg">
+          </div>
+          <div class="bocadillo">
+            <h3>Our campus</h3>
+            <p>Find which campus is close by you</p>
+            <p><a>Read more</a></p>
         </div>
         <div class="info">
-          <img src="resources\images\information-guest-lecture.jpg">
-          <h3>Our guest lecture</h3>
-          <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-          <p><a>Read More</a></p>
+          <div class="img-cont">
+            <img src="resources\images\information-guest-lecture.jpg">
+          </div>
+          <div class="bocadillo">
+            <h3>Our guest lecture</h3>
+            <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+            <p><a>Read More</a></p>
+          </div>
         </div>
       </div>
     </div>
