--- a/index.html
+++ b/index.html
@@ -39,38 +39,33 @@
 
     <!--Business-->
 
-    <div class="business">
+     <div class="business">
       <div class="business-banner">
-        <img src="resources/images/information-main.jpg">
+        <img src="resources/images/information-main.jpg" class="dima">
         <h2>It doesn't hurt to keep practicing</h2>
         <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,nec consequat neque. Sed nom accusan urna. Phasellus sed consequat ex.Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
         <p> Emanuel, Sr Strategist at Hiring.com</p>
       </div>
       <div class="business-info">
-        <div class="info">
-          <div class="img-cont"
+        <div class="material">
             <img src="resources\images\information-orientation.jpg">
-          </div>
           <div class="bocadillo">
             <h3>Orientation date</h3>
             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
             <p><a>Read more</a></p>
           </div>
         </div>
-        <div class="info">
-          <div class="img-cont">
+        <div class="material">
             <img src="resources\images\information-campus.jpg">
-          </div>
           <div class="bocadillo">
             <h3>Our campus</h3>
             <p>Find which campus is close by you</p>
             <p><a>Read more</a></p>
-        </div>
-        <div class="info">
-          <div class="img-cont">
-            <img src="resources\images\information-guest-lecture.jpg">
           </div>
-          <div class="bocadillo">
+        </div>
+        <div class="material">
+            <img src="resources\images\information-guest-lecture.jpg">
+              <div class="bocadillo">
             <h3>Our guest lecture</h3>
             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
             <p><a>Read More</a></p>
@@ -78,6 +73,100 @@
         </div>
       </div>
     </div>
+</div>
+
+  <!--Main-->
+
+  <div class="main">
+    <h1>Start learning</h1>
+    <div class="course">
+      <div class="curso">
+        <img src="resources\images\course-software.jpg">
+        <div class="datos">
+          <h3>Software enginerring</h3>
+          <span>COURSES</span>
+          <p>Web Development, Mobile Development. iOT, APIs</p>
+      </div>
+    </div>
+      <div class="curso">
+        <img src="resources\images\course-computer-art.jpg">
+        <div class="datos">
+          <h3>Computer art</h3>
+          <span>COURSES</span>
+          <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+        </div>
+      </div>
+      <div class="curso">
+        <img src="resources\images\course-design.jpg">
+        <div class="datos">
+          <h3>Design</h3>
+          <span>COURSES</span>
+          <p>User Experience Design, User Research, Visual Design</p>
+        </div>
+      </div>
+      <div class="curso">
+        <img src="resources\images\course-data.jpg">
+        <div class="datos">
+          <h3>Data</h3>
+          <span>COURSES</span>
+          <p>Data Science, Big Data, SQL, Data Visualization</p>
+        </div>
+      </div>
+      <div class="curso">
+        <img src="resources\images\course-business.jpg">
+        <div class="datos">
+          <h3>Business</h3>
+          <span>COURSES</span>
+          <p>Product Development,Business Development, Startup</p>
+        </div>
+      </div>
+      <div class="curso">
+        <img src="resources\images\course-marketing.jpg">
+        <dic class="datos">
+          <h3>Marketing</h3>
+          <span>COURSES</span>
+          <p>Analytics, Content Marketing, Mobile Marketing</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Thesis -->
+
+    <div class="tesis">
+      <h1>Thesis exhibit</h1>
+      <div class="vid-cont">
+        <video src="resources\videos\thesis.mp4"></video>
+        <h3>Reimagine urban</h3>
+        <p>"Curabitur vitae libero ipsum porttitot consequat. Aliquam et commodo lectus, nec consequat neque.Sed non accusan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
+      </div>
+      <div class="tesis-info">
+        <div class="fisma">
+         <div class="img-cont">
+          <img src="resources\images\thesis-fisma.jpg">
+         </div>
+       </div>
+        <div class="news">
+          <h2>Fisma: Design and PRototype</h2>
+          <p>Designer showcase of new prototype product</p>
+        </div>
+        <div class="research">
+          <div class="img-cont">
+            <img src="resources\images\thesis-now-and-then.jpg">
+          </div>
+          <div class="news">
+            <h2>Now and then</h2>
+            <p>Research study about New York</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
+
 
 
 </div>
