--- a/index.html
+++ b/index.html
@@ -134,32 +134,40 @@
 
     <div class="tesis">
       <h1>Thesis exhibit</h1>
-      <div class="vid-cont">
-        <video src="resources\videos\thesis.mp4"></video>
-        <h3>Reimagine urban</h3>
-        <p>"Curabitur vitae libero ipsum porttitot consequat. Aliquam et commodo lectus, nec consequat neque.Sed non accusan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
-      </div>
-      <div class="tesis-info">
-        <div class="fisma">
-         <div class="img-cont">
-          <img src="resources\images\thesis-fisma.jpg">
-         </div>
-       </div>
-        <div class="news">
-          <h2>Fisma: Design and PRototype</h2>
-          <p>Designer showcase of new prototype product</p>
+      <div class="contenedor">
+        <div class="videof">
+
+          <video src="resources\videos\thesis.mp4" controls></video>
+
+          <h3>Reimagine urban</h3>
+          <p>"Curabitur vitae libero ipsum porttitot consequat. Aliquam et commodo lectus, nec consequat neque.Sed non accusan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
         </div>
-        <div class="research">
-          <div class="img-cont">
-            <img src="resources\images\thesis-now-and-then.jpg">
-          </div>
+        <div class="tesis-info">
+          <div class="fisma">
+           <div class="img-cont">
+            <img src="resources\images\thesis-fisma.jpg">
+           </div>
+
           <div class="news">
-            <h2>Now and then</h2>
-            <p>Research study about New York</p>
+            <h2>Fisma: Design and PRototype</h2>
+            <p>Designer showcase of new prototype product</p>
+          </div>
+        </div>
+          <div class="research">
+            <div class="img-cont">
+              <img src="resources\images\thesis-now-and-then.jpg">
+            </div>
+            <div class="news">
+              <h2>Now and then</h2>
+              <p>Research study about New York</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
+
+
 
 
 
