--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <!-- Thesis -->
 
     <div class="tesis">
-      <h1>Thesis exhibit</h1>
+      <h1><center>Thesis exhibit</center></h1>
       <div class="contenedor">
         <div class="videof">
 
@@ -166,6 +166,10 @@
       </div>
     </div>
 
+    <footer>
+      <p>&#9400; 2016 Colmar Academy. All rights reserved</p>
+      <span>Terms</span>
+      <span>Privacy</span>
 
 
 
