--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="logo">
         <img src="resources\images\ic-logo.svg">
-        <h3>COLMAR</h3>
+        <h3 class="bold">COLMAR</h3>
         <h3>ACADEMY</h3>
       </div>
       <div>
@@ -33,9 +33,10 @@
       <div class="banner-info">
         <h1>Learn something new everyday</h1>
         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-        <p>Start here</p>
+        <p class="button">Start here</p>
       </div>
     </div>
+
 
     <!--Business-->
 
@@ -166,10 +167,15 @@
       </div>
     </div>
 
+<!--footer-->
+
     <footer>
       <p>&#9400; 2016 Colmar Academy. All rights reserved</p>
-      <span>Terms</span>
-      <span>Privacy</span>
+      <ul>
+        <li>Terms</li>
+        <li>Privacy</li>
+      </ul>
+    </footer>
 
 
 
