--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <img src="resources/images/information-main.jpg" class="dima">
         <h2>It doesn't hurt to keep practicing</h2>
         <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,nec consequat neque. Sed nom accusan urna. Phasellus sed consequat ex.Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-        <p> Emanuel, Sr Strategist at Hiring.com</p>
+        <span> Emanuel, Sr Strategist at Hiring.com</span>
       </div>
       <div class="business-info">
         <div class="material">
