--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="bocadillo">
             <h3>Orientation date</h3>
             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-            <p><a>Read more</a></p>
+            <p><a href="#">Read more</a></p>
           </div>
         </div>
         <div class="material">
@@ -61,17 +61,17 @@
           <div class="bocadillo">
             <h3>Our campus</h3>
             <p>Find which campus is close by you</p>
-            <p><a>Read more</a></p>
+            <p><a href="#">Read more</a></p>
           </div>
         </div>
         <div class="material">
             <img src="resources\images\information-guest-lecture.jpg">
-              <div class="bocadillo">
-            <h3>Our guest lecture</h3>
-            <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-            <p><a>Read More</a></p>
-          </div>
-        </div>
+              <div class="bocadillo rosado">
+               <h3>Our guest lecture</h3>
+               <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+              <p><a href="#">Read More</a></p>
+             </div>
+         </div>
       </div>
     </div>
 </div>
