--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
           <li>Sign in<li>
         </ul>
       </div>
+      <div class="mobile-header">
+        <img src="resources\images\ic-logo.svg">
+        <img src="resources\images\ic-on-campus.svg">
+        <img src="resources\images\ic-login.svg">
+        <img src="resources\images\ic-online.svg">
+      </div>
     </header>
 
 <!--Banner-->
@@ -151,7 +157,7 @@
            </div>
 
           <div class="news">
-            <h2>Fisma: Design and PRototype</h2>
+            <h2>Fisma: Design and Prototype</h2>
             <p>Designer showcase of new prototype product</p>
           </div>
         </div>
