--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
  <html>
   <head>
     <title> </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
     <link href="resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
@@ -9,6 +10,7 @@
 
   <body>
     <header>
+      <div id="desktop-header">
       <div class="logo">
         <img src="resources\images\ic-logo.svg">
         <h3 class="bold">COLMAR</h3>
@@ -22,11 +24,12 @@
           <li>Sign in<li>
         </ul>
       </div>
-      <div class="mobile-header">
+    </div>
+      <div id="mobile-header">
         <img src="resources\images\ic-logo.svg">
         <img src="resources\images\ic-on-campus.svg">
-        <img src="resources\images\ic-login.svg">
         <img src="resources\images\ic-online.svg">
+        <img src="resources\images\ic-login.svg">        
       </div>
     </header>
 
