--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <div class="business-info">
         <div class="material">
             <img src="resources\images\information-orientation.jpg">
+            <img src="resources\images\information-orientation-mobile.jpg" class="mobile-img">
           <div class="bocadillo">
             <h3>Orientation date</h3>
             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
@@ -71,6 +72,7 @@
         </div>
         <div class="material">
             <img src="resources\images\information-campus.jpg">
+            <img src="resources\images\information-campus-mobile.jpg" class="mobile-img">
           <div class="bocadillo">
             <h3>Our campus</h3>
             <p>Find which campus is close by you</p>
@@ -79,6 +81,7 @@
         </div>
         <div class="material">
             <img src="resources\images\information-guest-lecture.jpg">
+            <img src="resources\images\information-guest-lecture-mobile.jpg" class="mobile-img">
               <div class="bocadillo rosado">
                <h3>Our guest lecture</h3>
                <p>Join a keynote with Oliver Sack about music in medical treatment</p>
