--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <div class="main">
     <h1>Start learning</h1>
     <div class="course">
-      <div class="curso">
+      <div class="curso" >
         <img src="resources\images\course-software.jpg">
         <div class="datos">
           <h3>Software enginerring</h3>
@@ -144,6 +144,14 @@
           <span>COURSES</span>
           <p>Analytics, Content Marketing, Mobile Marketing</p>
         </div>
+      </div>
+      <div class="mobile-main">
+        <h3>Software enginerring</h3>
+        <h3>Computer art</h3>
+        <h3>Design</h3>
+        <h3>Data</h3>
+        <h3>Business</h3>
+        <h3>Marketing</h3>
       </div>
     </div>
 
