--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
 
     <div class="tesis">
       <h1><center>Thesis exhibit</center></h1>
-      <div class="contenedor">
+      <video src="resources\videos\thesis.mp4" controls class="mobile-vid"></video>
+        <div class="contenedor">
         <div class="videof">
 
           <video src="resources\videos\thesis.mp4" controls></video>
